--- a/templates/temp.html
+++ b/templates/temp.html
@@ -5,15 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 
 
-<body>
-  <h1>Введите слово на проверку на палиндром</h1>
-  <form action="" method="post">
-    <input type="text" name="word">
-    <input type="submit">
+<body style="text-align: center; background-color: rgb(235, 247, 255);">
+  <h1 style="margin-top: 8%;">{{ about }}</h1>
+  <form method="POST">  
+    <div style="width: 50%; margin-left: 25%;">
+      {% for p in a %}
+        <input type="text" class="form-control" style="margin-top: 5%;" name="{{p}}" /> 
+      {% endfor %}
+        <input class="btn btn-primary" type="submit" value="Submit" style="margin-top: 7%; margin-bottom: 7%; width: 30%; height: 8%;"/>
+    </div>
   </form>
-  {{message}}
+
+  {% if res %}
+  <h2>{{res}}</h2>
+  {% endif %}
 </body>
 </html>
